scrollbar fixed, pizzaBlock layout fixed, cartButton changed, counter of added pizzas fixed

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,3 +1,4 @@
+@import '../../scss/vars';
 .btn {
     font-family: 'Proxima Nova', sans-serif;
     font-weight: 700;
@@ -109,6 +110,11 @@
         font-size: 16px;
         padding: 15px 23px;
         background-color: #fe5f1e;
+        transition: box-shadow 0.2s linear;
+
+        &:hover {
+            box-shadow: 0 0 20px rgba($orange, 0.5);
+        }
     }
 
     &--add-to-cart {
